ingress-sample/ingress-multihost-example.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: croc-hunter-multihost
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: bruno.52.161.104.95.xip.io
    http:
      paths:
      - backend:
          serviceName: croc-hunter-s1
          servicePort: 80
  - host: mani.52.161.104.95.xip.io
    http:
      paths:
      - backend:
          serviceName: croc-hunter-s2
          servicePort: 80
